--- a/Styles/style.css
+++ b/Styles/style.css
@@ -10,7 +10,7 @@ header{
     display:flex;
     justify-content: flex-end;
     position: fixed;
-       }
+    }
 
 ul{
     list-style-type: none;
@@ -19,6 +19,7 @@ ul{
 }
 
 .nav_bar {
+
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     line-height: 2;
@@ -30,52 +31,76 @@ ul{
     }
 
     hr {
-        height: 6px;
+    height: 6px;
 	border: 0;
 	box-shadow: 0 6px 6px -6px #413c69 inset;
     }
 
+    @media only screen and (max-width: 750px) {
+    .nav_bar{
+    font-size: 13px;
+        }
+    hr{
+        height: 2px;
+        width: 85%;
+    }
+
+    }
+    
+    .welcome-section{
+        padding-top: 50px;
+        position: relative;
+        text-align: center;
+        z-index: -1; /* image will be hehind the text*/
+    }
+
+
     .my_photo {
         width: 90%;
-        height: 90vh;
+        height: auto;  /*makes media responsive*/
         padding-top: 15px;
       }
 
       .hey{
-        position: absolute;
-        top:28%;
-        left:40%;
-      font-family: 'Sacramento', cursive;
-      font-size: 35px;
-        color: #413c69;
+    position: absolute;
+    top:40%;
+    left:50%;
+    transform: translate(-50%, -50%);
       }
 
-.hey2{
-    position: absolute;
-        top:40%;
-        left:43%;
+    h1{
+    display: inline;
+    text-align: center;
+    font-family: 'Sacramento', cursive;
+    font-size: 5rem;
+    color: #413c69;
+    margin: 0;
+      }
+
+h2{
     font-family: 'Montserrat', sans-serif;
     color: #413c69;
+    margin: 0;
+    font-size: 2rem;
 }
-
 
 .but1 {
     position: absolute;
-    width: 150px;
-    height: 150px;
-    left:25%;
-    top: 20%;
-    transform: rotate(-20deg);
+    width: 5rem;
+    height: 5rem;
+    left:22%;
+    top: 34%;
+    transform: rotate(-30deg);
      }
 
 
 .but2 {
     position: absolute;
-    width: 150px;
-    height: 150px;
-    right:22%;
-    top: 45%;
-    transform: rotate(30deg);
+    width: 6rem;
+    height: 6rem;
+    left:25%;
+    top: 8%;
+    transform: rotate(-30deg);
            
     }
     
@@ -88,22 +113,4 @@ ul{
     top: 15%;
     transform: rotate(30deg);
               
-    }
-.but4 {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    right:30%;
-    top: 30%;
-    transform: rotate(30deg);
-                   
-    }                
-.but5 {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    right:40%;
-    top: 30%;
-    transform: rotate(30deg);
-                       
     }
