--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,6 +6,7 @@ body{
 }
 
 header{  
+    margin-top: 10px;
     width: 80%;
     display:flex;
     justify-content: flex-end;
@@ -24,8 +25,8 @@ ul{
     font-family: 'Montserrat', sans-serif;
     line-height: 2;
     color: #413c69;
-    margin-right: 20px;
-    padding: 20px;
+    margin-right: 1.25rem;
+    padding: 1.25rem;
     font-weight: bold;
     text-decoration:none;
     }
@@ -36,18 +37,48 @@ ul{
 	box-shadow: 0 6px 6px -6px #413c69 inset;
     }
 
-    @media only screen and (max-width: 770px) {
-    .nav_bar{
-    font-size: 13px;
+ 
+    @media only screen and (max-width: 411px) {
+        header{
+            width: 100%;
+            justify-content: center;
         }
+        ul{
+            padding: 0;
+        }
+        .nav_bar{
+        font-size: 0.5rem;
+        margin-right:0.5rem ;
+        padding: 0;
+            }
+        hr{
+            height: 0.01rem;
+         }
+        }
+
+    @media only screen and (min-width: 412px) and (max-width: 770px) {
+        header{
+            width: 100%;
+            justify-content: center;
+        }
+        ul{
+            padding: 0;
+        }
+        .nav_bar{
+            font-size: 1.2rem;
+            margin-right:0.7rem ;
+            padding: 0;
+                }
     hr{
-        height: 2px;
-        width: 85%;
+        height: 0.125rem;
+       
     }
     }
-    
+  
+        
+
     .welcome-section{
-        padding-top: 50px;
+        padding-top: 3.125rem;
         position: relative;
         text-align: center;
         z-index: -1; /* image will be hehind the text*/
@@ -107,4 +138,24 @@ h2{
     right:25%;
     top: 15%;
     transform: rotate(30deg);         
+    }
+
+    @media only screen and (max-width: 411px) {
+    h1{
+        font-size: 1rem;
+    }
+    h2{
+        font-size: 1rem;
+    }
+    .but1, .but2, .but3{
+        width: 1rem;
+        height: 1rem;
+    }
+    .but2{
+        top:30%
+    }
+        }
+
+    @media only screen and (min-width: 412px) and (max-width: 770px) {
+  
     }
