--- a/Styles/style.css
+++ b/Styles/style.css
@@ -38,7 +38,7 @@ ul{
     }
 
  
-    @media only screen and (max-width: 411px) {
+    @media only screen and (max-width: 414px) {
         header{
             width: 100%;
             justify-content: center;
@@ -53,13 +53,15 @@ ul{
             }
         hr{
             height: 0.01rem;
+            margin-top: 0.3rem;
+            margin-bottom: 0;
          }
         }
 
-    @media only screen and (min-width: 412px) and (max-width: 770px) {
+    @media only screen and (min-width: 415px) and (max-width: 770px) {
         header{
-            width: 100%;
-            justify-content: center;
+            width: 90%;
+            justify-content: ;
         }
         ul{
             padding: 0;
@@ -71,7 +73,8 @@ ul{
                 }
     hr{
         height: 0.125rem;
-       
+        margin-top: 0.3rem;
+        margin-bottom: 0;
     }
     }
   
@@ -88,7 +91,7 @@ ul{
     .my_photo {
         width: 90%;
         height: auto;  /*makes media responsive*/
-        padding-top: 15px;
+        padding-top: 0.93rem;
       }
 
     .hey{
@@ -140,22 +143,57 @@ h2{
     transform: rotate(30deg);         
     }
 
-    @media only screen and (max-width: 411px) {
+    @media only screen and (max-width: 414px) {
+        .welcome-section{
+            padding-top: 2rem;
+        }
+        .my_photo{
+            padding-top: 0.5rem;
+        }
     h1{
         font-size: 1rem;
     }
     h2{
         font-size: 1rem;
     }
-    .but1, .but2, .but3{
-        width: 1rem;
-        height: 1rem;
+    .but1{
+        width: 1.3rem;
+        height: 1.3rem;
+        top: 43%
     }
     .but2{
-        top:30%
+        width: 2rem;
+        height: 2rem;
+        top: 20%;
+    }
+    .but3{
+        width: 2.1rem;
+        height: 2.1rem;
+        top: 17%;
+        right: 20%;
     }
         }
 
-    @media only screen and (min-width: 412px) and (max-width: 770px) {
-  
+    @media only screen and (min-width: 415px) and (max-width: 770px) {
+        h1{
+            font-size: 3rem;
+        }
+        h2{
+            font-size: 1.5rem;
+        }
+        .but1{
+            width: 4rem;
+            height: 4rem;
     }
+    .but2{
+        width: 5rem;
+        height: 5rem;
+        top: 10%;
+    }
+    .but3{
+        width: 5.1rem;
+        height: 5.1rem;
+
+
+
+}
