--- a/Styles/style.css
+++ b/Styles/style.css
@@ -206,6 +206,15 @@ h2{
     margin: auto;
     width: 90%;
 }
+h3{
+    color: #ad62aa;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    margin:0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+}
 
 figure{
     font-family:'Domine', serif;
@@ -214,14 +223,13 @@ figure{
     margin: 0;
     width: 100%;
 }
- .picture{
+.picture{
     border-radius: 20px;
     box-shadow: 5px 5px 7px 0px #413C69;
     height:auto;
     margin-bottom: 1rem;
     margin-top: 2rem;
-    width:50%;
-    
+    width:50%;  
 }
 
 article{
@@ -230,21 +238,72 @@ article{
     width: 100%;
 }
 
-h3{
-    color: #ad62aa;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
-    margin:0;
+.about-me{
+    background-color: #f9ebf0;
+    border-color: #ad62aa;
+    /*border-width:5px;  
+    border-style:dotted;*/
+    display:inline-block;
+    margin-bottom: 1rem;
+
+}
+.picture1{
+    /*border:solid 1px #413C69;*/
+    border-radius: 50%;
+    float: left;
+    margin-right: 5rem;
+    margin-top: 0.5rem;
+    shape-outside:circle() ;
+    width: 12%;
 }
 
+.computer{
+    margin-top: 0;
+    width: 90%;
+  
+}
+.picture2{
+   /* border:solid 1px #413C69;*/
+    border-radius: 50%;
+    float: right;
+    margin-left: 5rem;
+    shape-outside:circle();
+    width: 15%;
+}
 
+.education{
+    margin-left: 6rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+   
+}
+.picture3{
+    /*border:solid 1px #413C69;*/
+    border-radius: 50%;
+    float: left;
+    shape-outside:circle();
+    width: 15%;
+}
+
+.cosmetics{
+    padding-top: ;
+}
+.picture4{
+    /*border:solid 1px #413C69;*/
+    border-radius: 50%;
+    float: right;
+    padding-top: 1rem;
+    shape-outside:circle() content-box;
+    width: 15%;
+}
 p{
+    
     font-family:'Domine', serif;
     line-height: 1.6;
-    text-align: justify;
+    text-align: center;
   }
 
-  .picture2{
+  .picture5{
     height:auto;
     justify-content: center;
     width:30%;
