change layout of the section

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -33,7 +33,7 @@ ul{
     text-decoration:none;
     }
 
-    hr {    
+    .HRnav {    
 	border: 0;
     box-shadow: 0 6px 6px -6px #413c69 inset;
     height: 6px;
@@ -57,7 +57,7 @@ ul{
         margin-right:0.5rem ;
         padding: 0;
             }
-        hr{
+        .HRnav{
             height: 0.01rem;
             margin-top: 0.3rem;
             margin-bottom: 0;
@@ -76,7 +76,7 @@ ul{
             margin-right:0.7rem ;
             padding: 0;
          }
-    hr{
+         .HRnav{
         height: 0.125rem;
         margin-bottom: 0;
         margin-top: 0.3rem;
@@ -199,12 +199,15 @@ h2{
         width: 5.1rem;
 }
  }
-.Me{
+
+
+.main_section{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap:;
     margin: auto;
-    width: 90%;
+    width: 100%;
+    /*border:solid 1px #413c69;*/
 }
 h3{
     color: #ad62aa;
@@ -212,112 +215,98 @@ h3{
     font-size: 3.5rem;
     margin:0;
     margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     width: 100%;
+
 }
 
-figure{
+/*figure{
     font-family:'Domine', serif;
     font-size: 0.9rem;
     line-height: 1.6;
     margin: 0;
     width: 100%;
-}
+}*/
 .picture{
-    border-radius: 20px;
-    box-shadow: 5px 5px 7px 0px #413C69;
-    height:auto;
-    margin-bottom: 1rem;
-    margin-top: 2rem;
-    width:90%;  
+background-image: url(/Images/my.jpg);
+background-size: cover;
+    /*border-radius: 20px;*/
+    /*box-shadow: 5px 5px 7px 0px #413C69;*/
+height:100vh;
+width:100%;
 }
 
-article{
+.About_me{
+    background-color: #ffe6e6;
     grid-column-start: 2;
     grid-column-end: -1;
-    width: 100%;
+    height: 100vh;
+    margin: 0;
+    overflow-x: auto;
+    text-align: center;
+    width: 100%;    
 }
 
-.about-me{
+.About_me::-webkit-scrollbar {
+    background: transparent; /* make scrollbar transparent */
+    width: 0px;
+    }
+
+
+/*.about-me{
     background-color: #f9ebf0;
-    /*border-width:5px;  
-    border-style:dotted;*/
+    border-color: #ad62aa;
+    /*border-width:5px;
+    border-style:dotted;
     display:inline-block;
     margin-bottom: 1rem;
-    box-shadow: 5px 5px 10px 2px #413C69;
 
-}
-.picture1{
-    /*border:solid 1px #413C69;*/
-    border-radius: 50%;
-    float: left;
-    margin-right: 5rem;
-    margin-top: 0.5rem;
-    shape-outside:circle() ;
-    width: 12%;
-}
-
-.computer{
-    margin-top: 0;
-    width: 90%;
-  
-}
-.picture2{
-   /* border:solid 1px #413C69;*/
-    border-radius: 50%;
-    float: right;
-    margin-left: 5rem;
-    shape-outside:circle();
-    width: 15%;
-}
-
-.education{
-    margin-left: 6rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-   
-}
-.picture3{
-    /*border:solid 1px #413C69;*/
-    border-radius: 50%;
-    float: left;
-    shape-outside:circle();
-    width: 15%;
-}
-
-.cosmetics{
-    padding-top: ;
-}
-.picture4{
-    /*border:solid 1px #413C69;*/
-    border-radius: 50%;
-    float: right;
-    padding-top: 1rem;
-    shape-outside:circle() content-box;
-    width: 15%;
-}
-
-.picture5{
-     /*border:solid 1px #413C69;*/
-     border-radius: 50%;
-     float:left;
-     padding-top: 1rem;
-     shape-outside:circle() content-box;
-     width: 15%;
-}
-
+}*/
 
 p{
-    
     font-family:'Domine', serif;
+    font-size: 1.2rem;
+    font-style: italic;
     line-height: 1.6;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;   
     text-align: center;
   }
 
-  .picture10{
+  .dots{
+      border-color: #ad62aa;
+      border-style: dotted none none;
+      border-width: 0.5rem;
+      width: 5%;
+  }
+
+  .quote{
+    color: #413c69;
+    font-size: 1.2rem;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    line-height: 1.6;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+ 
+  }
+
+  .picture2{
+    background-image: url(/Images/photo2.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height:100vh;
+    margin-top: 6.5rem;
+    width:100%;
+    }
+
+  .picture5{
     height:auto;
     justify-content: center;
     width:30%;
 
-    
+
   }
