--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,6 +13,11 @@ header{
     width: 100%;
     }
 
+header.scroll{
+    background-color: #f6eef6;
+
+}
+
     .navbar{
     margin-right: 4.45rem;
     }
