--- a/Styles/style.css
+++ b/Styles/style.css
@@ -14,7 +14,7 @@ header{
     }
 
 header.scroll{
-    background-color: #f6eef6;
+    background-color: #ffcccc;
 
 }
 
@@ -71,7 +71,7 @@ ul{
 
     @media only screen and (min-width: 415px) and (max-width: 770px) {
         header{
-            width: 90%;
+            width: 100%;
         }
         ul{
             padding: 0;
@@ -89,42 +89,51 @@ ul{
     }   
 
     .welcome-section{
-        padding-top: 3.125rem;
-        position: relative;
-        text-align: center;
-        z-index: -1; /* image will be hehind the text*/
-    }
+        background-image: url("/Images/back.png");
+        background-repeat: no-repeat;
+       background-size: contain;
+      background-attachment:fixed;
+      background-position: center center;
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center; 
+      
+          }
 
 
-    .my_photo {
-        height: auto;  /*makes media responsive*/
+    /*.my_photo {
+        height: auto;  /*makes media responsive
         padding-top: 0.93rem;
         width: 90%;
-      }
+      }*/
 
-    .hey{
-    left:50%;
-    position: absolute;
-    top:40%;
-    transform: translate(-50%, -50%);
-    }
+      .hey{
+        left:50%;
+        position: absolute;
+        top:40%;
+        transform: translate(-50%, -50%);
+        }
 
-    h1{
-    color: #413c69;
-    font-family: 'Sacramento', cursive;
-    font-size: 5rem;
-    margin: 0;
-    text-align: center;
-    }
+        h1{
+            color: #413c69;
+            font-family: 'Sacramento', cursive;
+            font-size: 5rem;
+            margin: 0;
+            text-align: center;
+         
+        
+            }
+        
+        h2{
+            color: #413c69;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 2rem;
+            margin: 0;
+        }
 
-h2{
-    color: #413c69;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    margin: 0;
-}
-
-.but1 {
+/*.but1 {
     height: 5rem;
     left:22%;
     position: absolute;
@@ -149,11 +158,12 @@ h2{
     top: 15%;
     transform: rotate(30deg);        
     width: 6.25rem;
-    }
+    }*/
 
     @media only screen and (max-width: 414px) {
         .welcome-section{
             padding-top: 2rem;
+            background-size: cover;
         }
         .my_photo{
             padding-top: 0.5rem;
@@ -183,6 +193,10 @@ h2{
         }
 
     @media only screen and (min-width: 415px) and (max-width: 770px) {
+        .welcome-section{
+            background-size: cover;
+        }
+        
         h1{
             font-size: 3rem;
         }
