--- a/Styles/style.css
+++ b/Styles/style.css
@@ -270,7 +270,7 @@ h3{
 
 .why{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(7, 1fr);
     margin: auto;
     position: relative;
     width: 100%;
@@ -278,21 +278,22 @@ h3{
 }
 
 
-.picture{
-background-image: url(/Images/new.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-grid-column-start:1;
-grid-column-end:3;
-height:100vh;
+.picture-balloon{
+height:auto;
 width:100%;
 }
 
+.picture{
+    grid-column-start:1;
+    grid-column-end:4;
+
+}
+
+
 .My_Why{
     background-color: white;
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: -1;
-    /*height: 100%;*/
     margin: 0;
     overflow-x: auto;
     position: absolute;
@@ -321,8 +322,7 @@ width:100%;
     grid-column-start: 1;
     grid-column-end: -1;
     line-height: 1.6;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin: 5rem 0 5rem 0;
     text-align: center;
  
   }
@@ -351,6 +351,7 @@ p{
   }
 
   /*My project section*/
+  
   /*image carousel*/
 
   .picture-carousel{
@@ -361,7 +362,9 @@ p{
   .flex-wrapper {
   display: flex;
       justify-content: center;
+      margin-top: 2rem;
       width: 100%;
+
       
     }
   
@@ -392,6 +395,7 @@ p{
   
   .slide {
     display: none;
+    box-shadow: 2px 6px 11px 3px #413c69;
   }
   
   .slide.active {
@@ -420,55 +424,19 @@ p{
       margin-right: 0;
   }
   
-  .random{
-    background-color: blanchedalmond;
-    position: relative;
-    }
-  
-  .facts{
-    background-color;
-  font-size:2em;
-  left: 50%;
-    position:absolute;
-    top:50%;
-      transform: translate(-50%, -50%);  
-  
-  }
-  
-  .text-carousel{
-   background-color: white;
-    box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.75);
-    color:black;
-    font-family:'Domine', serif;
-    font-size:1.6rem;
-    height: 4rem;
-     margin: 0;
-    position:absolute;
-    top:72%;
-    width: 99.9%;
-       
-    /*border:solid 1px black;*/
-      
-    }
-  
-    a{
-      color: black;
-    }
-    a:hover{
-      color:grey;
-    }
-
+ /*play/pause btn*/ 
+ 
     .controls{
         background: #404040;
         border: none;
         border-radius: 6px;
         color: #ffffff !important;
         display: inline-block;
-        font-family:'Montserrat', sans-serif;;
+        font-family:'Montserrat', sans-serif;
         font-size: 1rem;
         letter-spacing: 6px;
-        margin-top: 0.5rem;
-        padding: 15px;
+        margin-top: 0.9rem;
+        padding: 11px;
         text-transform: uppercase;      
         transition: all 0.3s ease 0s;
         width: 10rem;
@@ -480,7 +448,7 @@ p{
         font-weight: 700 !important;
         letter-spacing: 10px;
         background: none;
-        box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+        box-shadow: 0px 5px 40px -10px #413c69;
         transition: all 0.3s ease 0s;
     }
     /*other projects*/
@@ -495,6 +463,7 @@ p{
 
     .picture-projects{
     width: 100%;
+    box-shadow: 2px 6px 11px 3px #413c69;
     }
 
     .picture-projects:hover{
@@ -502,45 +471,73 @@ p{
     }
 
     figcaption{
-        font-family:'Montserrat', sans-serif;;
-        font-size: 1rem;
+        color: #413c69;
+        font-family:'Montserrat', sans-serif;
         font-weight: bold;
         margin-top: 0.5rem;
         padding: 0.4rem;
+        
+     }
+
+    .text-project{
+        font-size: 1.2rem;
+        text-decoration: none;
+        line-height: 2;
+
     }
 
     /*links*/
 h5{
+    color: #413c69;
     font-family:'Montserrat', sans-serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
+    font-weight:bolder;
     margin-bottom: 0;
 }
     .links{
         display: flex;
         justify-content: center;
     }
+    .project-links{
+        text-decoration: none;
+    }
+
+    figcaption:hover{
+        color:grey;
+      }
+
 
     /*footer*/
 
     h6{
+    color: #413c69;
     font-family:'Montserrat', sans-serif;
     font-size: 1.1rem;
-     margin-bottom: 0.5rem;
-     margin-top:1rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    margin-top:1rem;
     padding-top: 0.5rem;
    
     }
 
     .iconify{
-margin: 0.5rem 0.5rem 0 0.5rem;
+        color: #413c69;
+        margin: 0.5rem 0.5rem 0 0.5rem;
+    }
 
+    .iconify:hover{
+        color:grey;
     }
 
     footer{
-        height: 7.5rem;
+      height: 7.5rem;
         background-color: #faebeb;
     }
 
     .copyright{
-margin:0.5rem 0 0.5rem 0;
+        color: #413c69;
+        font-family:'Montserrat', sans-serif;
+        font-size: 0.9rem;
+        margin:0.5rem 0 0.5rem 0;
     }
+
