--- a/Styles/style.css
+++ b/Styles/style.css
@@ -60,8 +60,8 @@ ul{
             padding: 0;
         }
         .list{
-        font-size: 0.5rem;
-        margin-right:0.5rem ;
+        font-size: 0.9rem;
+        margin-right:0.9rem ;
         padding: 0;
             }
         .HRnav{
@@ -98,7 +98,9 @@ ul{
         z-index: -1; /* image will be hehind the text*/
     }
 
-
+    .mobile-photo{
+        display: none;
+    }
     .my_photo {
         height: auto;  /*makes media responsive*/
         padding-top: 0.93rem;
@@ -156,9 +158,16 @@ h2{
 
     @media only screen and (max-width: 414px) {
         .welcome-section{
-            padding-top: 2rem;
+            padding-top:;
+        }
+
+        .mobile-photo{
+            display: inline-block;
+            height: 100vh;
+            width: 100%;
         }
         .my_photo{
+           display: none;
             padding-top: 0.5rem;
         }
     h1{
@@ -168,16 +177,19 @@ h2{
         font-size: 1rem;
     }
     .but1{
+        display: none;
         height: 1.3rem;
         top: 43%;
         width: 1.3rem;
     }
     .but2{
+        display: none;
         height: 2rem;
         top: 21%;
         width: 2rem;     
     }
     .but3{
+        display: none;
         height: 2.1rem;
         right: 21%;
         top: 24%;
@@ -574,6 +586,7 @@ h5{
         display: flex;
         justify-content: center;
         margin-bottom: 3rem;
+        width: 100%;
     }
     .project-links{
         text-decoration: none;
@@ -609,6 +622,7 @@ h5{
     footer{
         background-color: #faebeb;
         height: 7.5rem;
+        width: 100%;
         
     }
 
@@ -619,3 +633,27 @@ h5{
         margin:0.5rem 0 0.5rem 0;
     }
 
+    @media only screen and (max-width: 414px) {
+
+        #quote2{
+            width: 50%;
+        }
+
+        .picture-carousel{
+            height: 15rem;
+            width:18rem ;
+        }
+
+        .other-projects{
+            display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        }
+
+        .picture-projects{
+            width: 100%;
+        }
+
+        .more{
+            margin:1rem;
+        }
+    }
