--- a/Styles/style.css
+++ b/Styles/style.css
@@ -61,7 +61,7 @@ ul{
         }
         .list{
         font-size: 0.9rem;
-        margin-right:0.9rem ;
+        margin-right:0.7rem ;
         padding: 0;
             }
         .HRnav{
@@ -157,45 +157,31 @@ h2{
     }
 
     @media only screen and (max-width: 414px) {
-        .welcome-section{
-            padding-top:;
-        }
-
-        .mobile-photo{
+               .mobile-photo{
             display: inline-block;
             height: 100vh;
             width: 100%;
         }
         .my_photo{
            display: none;
-            padding-top: 0.5rem;
+            
         }
     h1{
-        font-size: 1rem;
+        font-size: 2.2rem;
     }
     h2{
         font-size: 1rem;
     }
-    .but1{
+    .but1 {
         display: none;
-        height: 1.3rem;
-        top: 43%;
-        width: 1.3rem;
-    }
-    .but2{
-        display: none;
-        height: 2rem;
-        top: 21%;
-        width: 2rem;     
-    }
-    .but3{
-        display: none;
-        height: 2.1rem;
-        right: 21%;
-        top: 24%;
-        width: 2.1rem;
-    }
-        }
+ }
+ .but2{
+    display: none;
+ }
+ .but3{
+    display: none;
+ }
+            }
 
     @media only screen and (min-width: 415px) and (max-width: 770px) {
         h1{
@@ -244,7 +230,7 @@ width: 100%;
     width: 60%;
     }
 
-h3{
+    .title-Aboutme{
     color: #ad62aa;
     font-family: 'Montserrat', sans-serif;
     font-size: 3.5rem;
@@ -252,6 +238,10 @@ h3{
     margin-bottom: 0.5rem;
     width: 100%;
 
+}
+
+.title-mobile{
+display:none;
 }
 
 .article{
@@ -286,6 +276,19 @@ h3{
         width: 5%;
     }
 
+
+    .title-MyWhy{
+        color: #ad62aa;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 3.5rem;
+        margin-top:0;
+        margin-bottom: 0.5rem;
+        width: 100%;
+    
+    }
+    .title-why-mobile{
+        display:none;
+        }
 .why{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -297,7 +300,7 @@ h3{
 
 
 .picture-balloon{
-height:1auto;
+height:auto;
 width:100%;
 }
 
@@ -317,7 +320,7 @@ position: relative;
 
 }
 
-.My_Why{
+.article_My_Why{
     height: 100%;
     margin: 0;
     overflow-x: auto;
@@ -417,29 +420,119 @@ position: relative;
         }
 
   @media only screen and (max-width: 414px) {
-      .title{
-          left: 4rem;
-      }
-    h3{
-        font-size: 1rem;
+    .main_section{
+        margin-bottom: 2rem;
+    
     }
-    .article{
-        top: 1rem;
-        width: 80%;
+
+
+    .text-about-me{
+        display: none;
+          }
+        
+        .title-mobile{
+        display: inline-block;    
+        position: absolute;
+        left:50%;
+        top:50%;
+        transform: translate(-50%, -50%);   
+
+          }
+          .title-Aboutme-mobile{
+            color: #ad62aa;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 2rem;
+            width: 100%;
+            
+          }
+        
+/*why section*/
+.Why-text{
+    margin:0;
+}
+.article_My_Why{
+    display: none;
     }
-p{
-    font-size: 0.6rem;
+.title-why-mobile{
+   display: inline-block;  
+     position: absolute;
+        left:50%;
+        top:50%;    
+       transform: translate(-50%, -50%);   
+          width:100%;
+}       
+        
+.title-MyWhy-mobile  {
+
+        color: #ad62aa;
+            font-family: 'Montserrat', sans-serif;
+            font-size: 2rem;
+            margin:0;
+            width: 100%;
 }
 
-.dots{
-    border-width: 0.2rem;
+/*quote*/
+#quote2{
+    height:4rem; 
+    margin: 2rem auto;
+    width:80%;
 }
 
-
+ cite{
+    font-size:0.8rem;
+    top:-1.5rem;
   }
+  .quote{
+    font-size: 1rem;
+  }    
+
+  .corner{
+    height:0.8rem;
+     width:0.8rem;
+    
+  }
+  #left_top{
+    left:-0.5rem;
+    top:-0.5rem;        
+  }
+
+  #right_top{
+    right:-0.5rem;
+    top:-0.5rem;
+           
+  }
+
+  #left_bottom{
+    bottom:-0.5rem;
+    left:-0.5rem;
+   
+  }
+  #right_bottom{
+    bottom:-0.5rem;
+    right:-0.5rem;
+  }
+};
 
   /*My project section*/
   
+  
+  h3{
+    color: #ad62aa;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    margin-top:0;
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+  h3{ /*without second h3 user agent stylesheet owerwrite my css :( */
+    color: #ad62aa;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    margin-top:0;
+    margin-bottom: 0.5rem;
+    width: 100%;
+  }
+
   /*image carousel*/
 
   .picture-carousel{
@@ -452,8 +545,6 @@ p{
       justify-content: center;
       margin-top: 2rem;
       width: 100%;
-
-      
     }
   
     .slider-wrapper {
@@ -474,7 +565,6 @@ p{
     #btn-prev:hover, #btn-next:hover {
       opacity: 0.6;
   }
-  
   
   #btn-next {
       left: auto;
@@ -634,26 +724,61 @@ h5{
     }
 
     @media only screen and (max-width: 414px) {
-
-        #quote2{
-            width: 50%;
-        }
-
+        
+        h3{
+            
+            font-size: 2rem;
+            
+          }
         .picture-carousel{
-            height: 15rem;
-            width:18rem ;
-        }
+            height: 13rem;
+            width: 18rem;
+            }
+          
+            #btn-prev, #btn-next {             
+                height: 13rem;
+                position: absolute;
+                width: 2rem;
+            }
+      
+          .dots-wrapper {
+               margin-top: 0.5rem;
+          }
+       
+          span {
+             height: 0.5rem;    
+             margin-right: 0.5rem;
+             width: 0.5rem;
+          }
+                   
+         /*play/pause btn*/ 
+         
+            .controls{
+                font-size: 0.5rem;
+                margin-top: 0.9rem;
+                padding: 0.5rem;
+                width: 7rem;
+            }
+            .controls:hover{
+               letter-spacing: 0.3rem; 
+            }
 
         .other-projects{
             display: grid;
-        grid-template-columns: repeat(1, 1fr);
+            grid-template-columns: repeat(1, 1fr);
         }
 
         .picture-projects{
             width: 100%;
         }
-
+        .text-project{
+            font-size: 1rem;
+        }
+        h5{
+            margin: 1rem,0;
+        }
         .more{
-            margin:1rem;
+            font-size: 0.9rem;
+            margin:1rem 0.2rem;
         }
     }
